...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="aAm-PG-gZg">
                                                <variation key="heightClass=regular-widthClass=regular" constant="55"/>
                                            </constraint>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                        <state key="normal" title="Play Game">
                                            <color key="titleColor" red="1" green="0.33333333329999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="5"/>
...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="fsZ-lA-xME">
                                                <variation key="heightClass=regular-widthClass=regular" constant="55"/>
                                            </constraint>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                        <state key="normal" title="How To Play">
                                            <color key="titleColor" red="1" green="0.33333333329999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="5"/>
...
                            <constraint firstItem="8Xv-Yk-Lao" firstAttribute="trailing" secondItem="Udj-Wv-df0" secondAttribute="trailing" constant="20" id="W5P-JQ-B9g"/>
                            <constraint firstItem="Udj-Wv-df0" firstAttribute="leading" secondItem="8Xv-Yk-Lao" secondAttribute="leading" constant="20" id="j6M-mQ-281"/>
                            <constraint firstItem="8Xv-Yk-Lao" firstAttribute="bottom" secondItem="Udj-Wv-df0" secondAttribute="bottom" constant="20" id="v4V-t4-U3x"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="8Xv-Yk-Lao"/>
                    </view>
                    <navigationItem key="navigationItem" title="Memory Game" id="Nk0-Rv-Z6I">
                        <barButtonItem key="leftBarButtonItem" image="icon-back" id="ljI-gl-GOi">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="backButtonDidTouch:" destination="pEd-xe-hOH" id="daA-oZ-49Z"/>
                            </connections>
                        </barButtonItem>
...
